# stats

./: Bugs.txt  CalcStats.hs  LICENSE.txt  Makefile  Parsing.hs  Plot.hs  README.txt  StatsMain.hs  TODO  Test.csv  Test2.csv  stats.cabal
